# bo

./: .gitignore  .npmignore  CHANGELOG.md  CMakeLists.txt  NOTICE  README.md  package.json
bench/: bench.js
csrc/: bo.c  bo.h  test_c.c  wl_api.c
scripts/: build-browser.sh  build-wasm.sh  verify-exports.sh
src/: compile.js  index.js  optimizer.js  search.js  strategy.js  wasm.js
test/: test.js  test_python.py
wasm/: BUILD_INFO  bo.js
